Added bottom information

--- a/css/screen.css
+++ b/css/screen.css
@@ -40,14 +40,14 @@
 	--color-neutral-dark: var(--color-alpha-x-dark);
 
 	--global-color-alpha-x-transparent: #ffffff4d;
-	--global-color-error-x-transparent: #FF33334d;
+	--global-color-error-x-transparent: #ff33334d;
 
 	/* Font weights */
 	--global-default-weight: 400;
 
-
 	/* Shadows */
 	--shadow-neutral: 0 2px 6px rgba(0, 0, 0, 0.04);
+	--shadow-bottom: 0 2px 6px rgba(0, 0, 0, 0.04);
 
 	/* border radius */
 	--global-borderRadius: 3px;
@@ -56,31 +56,31 @@
 	/* transitions */
 	--global-transitionEasing-out: ease-out;
 	--global-transitionEasing-out-cubic: cubic-bezier(0.22, 0.61, 0.36, 1);
-	--global-transitionDuration-alpha: .1s;
-	--global-transitionDuration-beta: .2s;
-	--global-transitionDuration-gamma: .3s;
+	--global-transitionDuration-alpha: 0.1s;
+	--global-transitionDuration-beta: 0.2s;
+	--global-transitionDuration-gamma: 0.3s;
 
 	/* Grid System */
 
 	--global-baseline: 8px;
 	--global-whitespace: calc(var(--global-baseline) * 3);
 
-    --global-whitespace-xs: calc(var(--global-baseline) * .5);
-    --global-whitespace-sm: calc(var(--global-baseline) * 1);
-    --global-whitespace-md: calc(var(--global-baseline) * 2);
-    --global-whitespace-lg: calc(var(--global-baseline) * 4);
-    --global-whitespace-xl: calc(var(--global-whitespace) * 2);
-    --global-whitespace-xxl: calc(var(--global-whitespace) * 3);
+	--global-whitespace-xs: calc(var(--global-baseline) * 0.5);
+	--global-whitespace-sm: calc(var(--global-baseline) * 1);
+	--global-whitespace-md: calc(var(--global-baseline) * 2);
+	--global-whitespace-lg: calc(var(--global-baseline) * 4);
+	--global-whitespace-xl: calc(var(--global-whitespace) * 2);
+	--global-whitespace-xxl: calc(var(--global-whitespace) * 3);
 
 	--layout-header-height: calc(var(--global-baseline) * 5);
 
 	--global-input-focus-boxShadowSpread: 0 0 0 3px;
-    --global-input-focus-boxShadowColor: var(--global-color-alpha-x-transparent);
+	--global-input-focus-boxShadowColor: var(--global-color-alpha-x-transparent);
 	--global-input-error-boxShadowColor: var(--global-color-error-x-transparent);
-	
-	--color-input-alpha-x-light: #81B4E7;
-	--color-input-alpha: #5398DE;
-	--color-input-alpha-x-dark: #447DB6;
+
+	--color-input-alpha-x-light: #81b4e7;
+	--color-input-alpha: #5398de;
+	--color-input-alpha-x-dark: #447db6;
 }
 
 /*------------------------------------*\
@@ -232,7 +232,7 @@ hr {
 
 a {
 	transition: all var(--global-transitionDuration-alpha);
-	color: var(--color-alpha);
+	color: var(--color-input-alpha);
 	outline-color: var(--color-alpha);
 	outline-width: medium;
 	outline-offset: 2px;
@@ -240,12 +240,12 @@ a {
 
 a:visited,
 a:active {
-	color: var(--color-alpha);
+	color: var(--color-input-alpha-x-light);
 }
 
 a:hover,
 a:focus {
-	color: var(--color-alpha-light);
+	color: var(--color-input-alpha-x-light);
 }
 
 label,
@@ -357,26 +357,26 @@ span {
 */
 
 .o-button-reset {
-    border: none;
-    margin: 0;
-    padding: 0;
-    width: auto;
-    overflow: visible;
-    background: transparent;
+	border: none;
+	margin: 0;
+	padding: 0;
+	width: auto;
+	overflow: visible;
+	background: transparent;
 
-    /* inherit font & color from ancestor */
-    color: inherit;
-    font: inherit;
+	/* inherit font & color from ancestor */
+	color: inherit;
+	font: inherit;
 
-    /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
-    line-height: normal;
+	/* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+	line-height: normal;
 
-    /* Corrects font smoothing for webkit */
-    -webkit-font-smoothing: inherit;
-    -moz-osx-font-smoothing: inherit;
+	/* Corrects font smoothing for webkit */
+	-webkit-font-smoothing: inherit;
+	-moz-osx-font-smoothing: inherit;
 
-    /* Corrects inability to style clickable `input` types in iOS */
-    -webkit-appearance: none;
+	/* Corrects inability to style clickable `input` types in iOS */
+	-webkit-appearance: none;
 }
 
 /*------------------------------------*\
@@ -434,9 +434,8 @@ span {
 }
 
 @media screen and (min-width: 960px) {
-
 	.c-app {
-		display: grid;	
+		display: grid;
 	}
 
 	.c-app__header {
@@ -469,12 +468,16 @@ span {
 	text-align: left;
 }
 
-.c-main__center{
+.c-main__center {
 	padding-top: 0;
 }
 
-.c-main__bottom{
+.c-main__bottom {
 	padding-top: 0;
+}
+
+.c-main__info {
+	padding: var(--global-whitespace-sm) 0;
 }
 
 .c-item {
@@ -508,62 +511,62 @@ span {
 }
 
 .c-form-field {
-    position: relative;
+	position: relative;
 }
 
 .is-floating,
 .c-form-field:focus-within .c-label--floating {
-    transform: translateY(calc(var(--global-baseline) * -3))
+	transform: translateY(calc(var(--global-baseline) * -3));
 }
 
 .c-label {
-    margin-bottom: 0;
-    font-size: 14px;
-    padding-bottom: var(--global-whitespace-sm);    
-    line-height: calc(var(--global-baseline) * 2);
-    color: var(--color-alpha-x-dark);
+	margin-bottom: 0;
+	font-size: 14px;
+	padding-bottom: var(--global-whitespace-sm);
+	line-height: calc(var(--global-baseline) * 2);
+	color: var(--color-alpha-x-dark);
 }
 
 .c-label--floating {
-    position: absolute;
-    top: calc(var(--global-baseline) * 2);
-    left: var(--global-whitespace-sm);
-    padding: 0  var(--global-whitespace-sm);
-    background-color: var(--color-alpha-light-x);
-    transition: transform var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
-    z-index: 1;
+	position: absolute;
+	top: calc(var(--global-baseline) * 2);
+	left: var(--global-whitespace-sm);
+	padding: 0 var(--global-whitespace-sm);
+	background-color: var(--color-alpha-light-x);
+	transition: transform var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
+	z-index: 1;
 }
 
 .c-input {
-    --input-transition: all var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 100%;
-    border-radius: var(--global-borderRadius);
-    border: var(--global-borderWidth) solid var(--color-alpha-x-dark);
-    background-color: var(--color-alpha-light-x);
-    color: var(--color-alpha-x-dark);
-    font-family: inherit;
-    font-size: 16px;
-    line-height: calc(var(--global-baseline) * 3);
-    padding: calc(var(--global-baseline) * 1.5 - var(--global-borderWidth)) var(--global-whitespace-md);
-    outline: none;
-    transition: var(--input-transition);
+	--input-transition: all var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	width: 100%;
+	border-radius: var(--global-borderRadius);
+	border: var(--global-borderWidth) solid var(--color-alpha-x-dark);
+	background-color: var(--color-alpha-light-x);
+	color: var(--color-alpha-x-dark);
+	font-family: inherit;
+	font-size: 16px;
+	line-height: calc(var(--global-baseline) * 3);
+	padding: calc(var(--global-baseline) * 1.5 - var(--global-borderWidth)) var(--global-whitespace-md);
+	outline: none;
+	transition: var(--input-transition);
 }
 
 .c-input:hover {
-    border-color: var(--color-alpha-x-dark);
+	border-color: var(--color-alpha-x-dark);
 }
 
 .c-input:focus,
 .c-input:active {
-    border-color: var(--color-alpha-x-dark);
-    box-shadow: var(--global-input-focus-boxShadowSpread) var(--global-input-focus-boxShadowColor);
+	border-color: var(--color-alpha-x-dark);
+	box-shadow: var(--global-input-focus-boxShadowSpread) var(--global-input-focus-boxShadowColor);
 }
 
 .c-input--with-floating-label:focus {
-    box-shadow: 0 0 0 1px var(--global-input-focus-borderColor);
+	box-shadow: 0 0 0 1px var(--global-input-focus-borderColor);
 }
 
 /*
@@ -573,36 +576,50 @@ span {
 */
 
 .c-button {
-    font-size: 16px;
-    font-weight: 600;
-    border-radius: var(--global-borderRadius);
-    border: var(--global-borderWidth) solid var(--color-input-alpha-x-dark);
-    background-color: var(--color-input-alpha);
-    color: #fff;
-    padding: calc(var(--global-baseline) * 1.5 - var(--global-borderWidth)) var(--global-whitespace-md);
-    line-height: calc(var(--global-baseline) * 3);
-    width: 100%;
-    outline: none;
+	font-size: 16px;
+	font-weight: 600;
+	border-radius: var(--global-borderRadius);
+	border: var(--global-borderWidth) solid var(--color-input-alpha-x-dark);
+	background-color: var(--color-input-alpha);
+	color: #fff;
+	padding: calc(var(--global-baseline) * 1.5 - var(--global-borderWidth)) var(--global-whitespace-md);
+	line-height: calc(var(--global-baseline) * 3);
+	width: 100%;
+	outline: none;
 	box-shadow: var(--global-input-focus-boxShadowSpread) var(--color-alpha-x-light);
-    transition: all var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
+	transition: all var(--global-transitionDuration-alpha) var(--global-transitionEasing-out);
 }
 
 .c-button:hover {
-    border-color: var(--color-input-alpha);
+	border-color: var(--color-input-alpha);
 	background-color: var(--color-input-alpha-x-dark);
 	box-shadow: var(--global-input-focus-boxShadowSpread) var(--color-input-alpha-x-light);
 }
 
-.c-button:focus {	
-    background-color: var(--color-input-alpha);
-    border-color: var(--color-input-alpha-x-dark);
-    box-shadow: var(--global-input-focus-boxShadowSpread) var(--color-input-alpha-x-light);
+.c-button:focus {
+	background-color: var(--color-input-alpha);
+	border-color: var(--color-input-alpha-x-dark);
+	box-shadow: var(--global-input-focus-boxShadowSpread) var(--color-input-alpha-x-light);
 }
 
 .c-button:active {
-    background-color: var(--color-input-alpha-x-dark);
-    border-color: var(--color-input-alpha-x-dark);
-    box-shadow: var(--global-input-focus-boxShadowSpread) var(--color-input-alpha-x-light);
+	background-color: var(--color-input-alpha-x-dark);
+	border-color: var(--color-input-alpha-x-dark);
+	box-shadow: var(--global-input-focus-boxShadowSpread) var(--color-input-alpha-x-light);
+}
+
+.c-info {
+	margin: auto;
+}
+
+.c-item__info {
+	display: flex;
+	flex-direction: row;
+}
+
+.c-info__text {
+	margin: 0 auto;
+	font-weight: 500;
 }
 
 /*------------------------------------*\
@@ -639,6 +656,7 @@ span {
 	.u-x-span-6-bp3 {
 		grid-column: span 6;
 	}
+}
 
 /*
     Utilities: color
