--- a/css/screen.css
+++ b/css/screen.css
@@ -49,7 +49,7 @@
 
 	/* Shadows */
 	--shadow-neutral: 0 2px 6px rgba(0, 0, 0, 0.04);
-	--shadow-bottom: 0 2px 6px rgba(0, 0, 0, 0.04);
+	--shadow-box: 0 3px 6px rgba(0, 0, 0, 0.2);
 
 	/* border radius */
 	--global-borderRadius: 3px;
@@ -424,6 +424,32 @@ span {
 
 .c-app__top {
 	padding-top: 0;
+}
+
+.c-app__card {
+	height: 312px;
+	width: 240px;
+	box-shadow: var(--shadow-box);
+	padding: var(--global-whitespace-md);
+}
+
+.c-card__title {
+	font-weight: 500;
+	font-size: 24px;
+}
+
+.c-card__price {
+	font-weight: 400;
+	color: var(--color-alpha-dark);
+}
+
+.c-card__percentage {
+	margin-left: var(--global-whitespace-sm);
+}
+
+.c-card__label--price {
+	display: flex;
+	flex-direction: row;
 }
 
 @media screen and (min-width: 992px) {
